// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RosterStatsDiagView RosterStatsDiagView - expanded, should create snapshot 1`] = `
<span>
  ORtg: [
  <b>
    119.8
  </b>
  ] = Points_Produced [
  <b>
    569.6
  </b>
  ] / Adjusted_Possessions [
  <b>
    475.2
  </b>
  ] (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about points
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about possessions
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about Adj+ ORtg
  </a>
  )
  <ul>
    <li>
      Points_Produced: [
      <b>
        569.6
      </b>
      ] = PProd_From_ORB [
      <b>
        9.6
      </b>
      ] + [
      <b>
        560.0
      </b>
      ] (PProd_From_FG [
      <b>
        299.2
      </b>
      ] + FTM [
      <b>
        172.0
      </b>
      ] + PProd_From_AST [
      <b>
        88.8
      </b>
      ], less Team_ORB_Contrib% [
      <b>
        0.0
        %
      </b>
      ]==[
      <b>
        0.0
      </b>
      ])
    </li>
    <ul>
      <li>
        <em>
          Compare raw stats: orb=[
          <b>
            17
          </b>
          ], pts=[
          <b>
            506
          </b>
          ] (fg_pts=[
          <b>
            334
          </b>
           = 
          <b>
            3
          </b>
          *
          <b>
            56
          </b>
           + 
          <b>
            2
          </b>
          *(
          <b>
            18
          </b>
           + 
          <b>
            65
          </b>
          )] + ftm=[
          <b>
            172
          </b>
          ]), assists=[
          <b>
            147
          </b>
          ]
        </em>
      </li>
    </ul>
    <span>
      <li>
        <u>
          Points section
        </u>
      </li>
      <ul>
        <li>
          PProd_From_FG: [
          <b>
            299.2
          </b>
          ] = Raw_FG_Pts [
          <b>
            334.0
          </b>
          ], less Team_Assist_Contrib% [
          <b>
            9.5
            %
          </b>
          ] * Assisted_Pts_Per_FG_Bonus [
          <b>
            1.10
          </b>
          ], gives [
          <b>
            34.8
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (Team_Assist_Contrib%: In the same way that Player gets rewarded for assisting their team, they get slightly less rewarded when they scored off an assist):
            </em>
          </li>
          <li>
            Team_Assist_Contrib% [
            <b>
              9.5
              %
            </b>
            ] = Weighting ([
            <b>
              0.5
            </b>
            ] * Player_Assisted_eFG [~
            <b>
              50.7
              %
            </b>
            ]) * Player_Assisted_Rate [~
            <b>
              37.4
              %
            </b>
            ] (averaged over shot types)
          </li>
          <ul>
            <li>
              <em>
                (The theory behind the weighting is that easier shots are harder to assist, so the higher the eFG the more credit to the assist.)
              </em>
            </li>
            <li>
              <em>
                The above values are calculated using a player's assist networks vs shot type. The "classic" algorithm approximates from box scores, giving ORtg=[
                <b>
                  119.5
                </b>
                ]:
              </em>
            </li>
            <ul>
              <li>
                <em>
                  (Classic) Team_Assist_Contrib% [
                  <b>
                    8.8
                    %
                  </b>
                  ] = Weighting ([
                  <b>
                    0.5
                  </b>
                  ] * Player_eFG [
                  <b>
                    46.9
                    %
                  </b>
                  ]) * Player_Assisted_Rate [
                  <b>
                    37.4
                    %
                  </b>
                  ]
                </em>
              </li>
              <li>
                <em>
                  (Classic, Unused) Team_Assist_Rate: [
                  <b>
                    37.9
                    %
                  </b>
                  ] = (Weighting [
                  <b>
                    1.14
                  </b>
                  ] * (Others_AST [
                  <b>
                    214
                  </b>
                  ] / Team_FGM [
                  <b>
                    643
                  </b>
                  ])
                </em>
              </li>
            </ul>
          </ul>
        </ul>
        <li>
          PProd_From_AST: [
          <b>
            88.8
          </b>
          ] = Sum(Shot Type)[Weighting ([
          <b>
            0.5
          </b>
          ] * ShotType_eFG [
          <b>
            48.8/48.8/48.8
          </b>
          ]%) * [
          <b>
            3/2/2
          </b>
          ]pts * Player_Assists [
          <b>
            70/10/67
          </b>
          ]]
        </li>
        <ul>
          <li>
            <em>
              (Classic) PProd_From_AST: [
              <b>
                82.9
              </b>
              ] = Weighting ([
              <b>
                0.5
              </b>
              ] * Team_Not_Player_eFG [
              <b>
                48.8
                %
              </b>
              ]) * Team_Not_Player_Pts_Per_Made_Shot [
              <b>
                2.3
              </b>
              ] * Player_Assists [
              <b>
                147
              </b>
              ]
            </em>
          </li>
        </ul>
        <li>
          PProd_From_ORB: [
          <b>
            9.6
          </b>
          ] = Team_ORB_Weight [
          <b>
            61.3
            %
          </b>
          ] * ORB [
          <b>
            17.0
          </b>
          ] * % Plays_Team_Scored [
          <b>
            42.2
            %
          </b>
          ] * Pts_Per_Scoring_Possession [
          <b>
            2.2
          </b>
          ] 
        </li>
        <ul>
          <li>
            <em>
              (Team_ORB_Weight is described under Team_ORB_Contrib%, below)
            </em>
          </li>
          <li>
            <em>
              (% Plays_Team_Scored is described in the possessions section, below)
            </em>
          </li>
          <li>
            Pts_Per_Scoring_Possession: [
            <b>
              2.2
            </b>
            ] = Team_Pts [
            <b>
              1937.0
            </b>
            ] / Team_Scoring_Plays [
            <b>
              890.4
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Team_Scoring_Plays described under possessions section, below)
              </em>
            </li>
          </ul>
        </ul>
        <li>
          <em>
            (Team_ORB_Contrib%: In the same way a Player gets rewarded for an ORB, they get slightly less reward for a score that comes off someone else's rebound):
          </em>
        </li>
        <li>
          Team_ORB_Contrib%: [
          <b>
            0.0
          </b>
          %] = Team_ORB_Weight [
          <b>
            61.3
            %
          </b>
          ] * % Team_Scoring_Plays_From_Rebound [
          <b>
            0.0
            %
          </b>
          ]
        </li>
        <ul>
          <li>
            % Team_Scoring_Plays_From_Rebound: [
            <b>
              0.0
              %
            </b>
            ] = (~All_Players_ORB [
            <b>
              0.0
            </b>
            ] * % Plays_Team_Scored [
            <b>
              42.2
              %
            </b>
            ]) / Scoring_Plays [
            <b>
              890.4
            </b>
            ] 
          </li>
          <ul>
            <li>
              <em>
                (% Plays_Team_Scored is described in the possessions section, below)
              </em>
            </li>
          </ul>
          <li>
            Team_ORB_Weight: [
            <b>
              61.3
              %
            </b>
            ] = % Credit_To_Rebounder [
            <b>
              28.9
              %
            </b>
            ] / ( % Credit_To_Rebounder [
            <b>
              28.9
              %
            </b>
            ] + % Credit_To_Scorer [
            <b>
              18.2
              %
            </b>
            ])
          </li>
          <ul>
            <li>
              <em>
                (The theory here is that we assign credit to the rebounder based on the relative difficulty of rebounding vs scoring)
              </em>
            </li>
            <li>
              % Credit_To_Rebounder: [
              <b>
                28.9
                %
              </b>
              ] = Team_No_ORB% [
              <b>
                68.5
                %
              </b>
              ] * Team_Score% [
              <b>
                42.2
                %
              </b>
              ]
            </li>
            <li>
              % Credit_To_Scorer: [
              <b>
                18.2
                %
              </b>
              ] = Team_ORB% [
              <b>
                31.5
                %
              </b>
              ] * Team_No_Score% [
              <b>
                57.8
                %
              </b>
              ]
            </li>
          </ul>
        </ul>
      </ul>
    </span>
    <li>
      Adjusted_Possessions: [
      <b>
        475.2
      </b>
      ] = Scoring_Possessions [
      <b>
        259.0
      </b>
      ] + Missed_FG_Possessions [
      <b>
        143.9
      </b>
      ] + Missed_FT_Possessions [
      <b>
        3.4
      </b>
      ] + TO [
      <b>
        69
      </b>
      ]
    </li>
    <ul>
      <li>
        (Gives adjusted usage: Adj_Usage = [
        <b>
          26.4
          %
        </b>
        ])
      </li>
      <li>
        <em>
          Compare raw stats: poss=[
          <b>
            451.5
          </b>
          ] (fga=[
          <b>
            356
          </b>
           = 
          <b>
            174
          </b>
           + (
          <b>
            65
          </b>
           + 
          <b>
            117
          </b>
          )] + [
          <b>
            0.454
          </b>
          ]*fta=[
          <b>
            96.3
          </b>
          ] + to=[
          <b>
            69
          </b>
          ] - orb=[
          <b>
            69.8
          </b>
          ])
        </em>
      </li>
    </ul>
    <span>
      <li>
        <u>
          Possessions section
        </u>
      </li>
      <ul>
        <li>
          Scoring_Possessions: [
          <b>
            259.0
          </b>
          ] = ORB_Part [
          <b>
            4.4
          </b>
          ] + (FG_Part [
          <b>
            125.8
          </b>
          ] + FT_Part [
          <b>
            92.9
          </b>
          ] + AST_Part [
          <b>
            35.9
          </b>
          ], less Team_ORB_Contrib% [
          <b>
            0.0
            %
          </b>
          ]==[
          <b>
            0.0
          </b>
          ])
        </li>
        <ul>
          <li>
            ORB_Part: [
            <b>
              4.4
            </b>
            ] = Team_ORB_Weight [
            <b>
              61.3
              %
            </b>
            ] * Scoring_Plays_From_Rebound [
            <b>
              7.2
            </b>
            ] (ORB [
            <b>
              17
            </b>
            ] * % Plays_Team_Scored [
            <b>
              42.2
              %
            </b>
            ]) 
          </li>
          <ul>
            <li>
              % Plays_Team_Scored: [
              <b>
                42.2
                %
              </b>
              ] = Team_Scoring_Plays [
              <b>
                890.4
              </b>
              ] / Team_Total_Plays [
              <b>
                2112.0
              </b>
              ]
            </li>
            <li>
              Team_Scoring_Plays: [
              <b>
                890.4
              </b>
              ] = Team_FGM [
              <b>
                643.0
              </b>
              ] + Team_FTs_Hit_1+ [
              <b>
                247.4
              </b>
              ]
            </li>
            <ul>
              <li>
                Team_FTs_Hit_1+: [
                <b>
                  247.4
                </b>
                ] = (1 - Team_FTs_Missed_Both% [
                <b>
                  5.9
                  %
                </b>
                ]) * ([
                <b>
                  0.454
                </b>
                ]*Team_FTA) [
                <b>
                  263.0
                </b>
                ]
              </li>
              <ul>
                <li>
                  Team_FTs_Missed_Both%: [
                  <b>
                    5.9
                    %
                  </b>
                  ] = (1 - Team_FT% [
                  <b>
                    75.6
                    %
                  </b>
                  ])^2
                </li>
                <li>
                  <em>
                    ([0.475]*FTA is standard for estimating the number of trips to the FT line; we use [
                    <b>
                      0.454
                    </b>
                    ] inferred from the actual possession count)
                  </em>
                </li>
              </ul>
            </ul>
            <li>
              Team_Total_Plays: [
              <b>
                2112.0
              </b>
              ] = Team_FGA [
              <b>
                1550
              </b>
              ] + ([
              <b>
                0.454
              </b>
              ]*Team_FTA) [
              <b>
                263.0
              </b>
              ] + Team_TOV [
              <b>
                299
              </b>
              ]
            </li>
            <li>
              <em>
                (Team_ORB_Weight is described in the points section, above. The cost of the play is reduced like the reward of the score)
              </em>
            </li>
          </ul>
          <li>
            FG_Part: [
            <b>
              125.8
            </b>
            ] = FGM [
            <b>
              139.0
            </b>
            ], less Team_Assist_Contrib% [
            <b>
              9.5
              %
            </b>
            ]===[
            <b>
              13.2
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Team_Assist_Contrib% is described in the points section, above. Since it reduces the reward of a score, it also reduces the cost of the play)
              </em>
            </li>
          </ul>
          <li>
            FT_Part: [
            <b>
              92.9
            </b>
            ] = (1 - Missed_Both_FTs% [
            <b>
              3.6
              %
            </b>
            ]) * [
            <b>
              0.454
            </b>
            ]*FTA [
            <b>
              96.3
            </b>
            ]
          </li>
          <ul>
            <li>
              Missed_Both_FTs%: [
              <b>
                3.6
                %
              </b>
              ] = (1 - FT% [
              <b>
                81.1
                %
              </b>
              ])^2
            </li>
          </ul>
          <li>
            AST_Part: [
            <b>
              35.9
            </b>
            ] = Sum(Shot Type)[Weighting ([
            <b>
              0.5
            </b>
            ] * ShotType_eFG [
            <b>
              48.8/48.8/48.8
            </b>
            ]%) * Player_Assists [
            <b>
              70/10/67
            </b>
            ]]
          </li>
          <li>
            <em>
              (Team_ORB_Contrib% is described in the points section, above. Since it reduces the reward of a score, it also reduces the cost of the play)
            </em>
          </li>
        </ul>
        <li>
          Missed_FG_Possessions: [
          <b>
            143.9
          </b>
          ] = Missed_FG [
          <b>
            217.0
          </b>
          ], less Team_Rebound_Weight [
          <b>
            33.7
            %
          </b>
          ]==[
          <b>
            73.1
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (Team_Rebound_Weight: each missed shot doesn't count a full possession, because it may be rebounded)
            </em>
          </li>
          <li>
            Team_Rebound_Weight: [
            <b>
              33.7
              %
            </b>
            ] = Weight [
            <b>
              1.07
            </b>
            ] * Team_ORB% [
            <b>
              31.5
              %
            </b>
            ]
          </li>
        </ul>
        <li>
          Missed_FT_Possessions: [
          <b>
            3.4
          </b>
          ] = Missed_Both_FTs% [
          <b>
            3.6
            %
          </b>
          ] * [
          <b>
            0.454
          </b>
          ]*FTA [
          <b>
            96.3
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (FT possession calcs above, under Team_Scoring_Plays)
            </em>
          </li>
        </ul>
      </ul>
    </span>
    <li>
      <b>
        Adjusted+ ORtg
      </b>
      : [
      <b>
        6.5
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        132.3
      </b>
      ] (ORtg [
      <b>
        119.8
      </b>
      ] + Usage_Bonus [
      <b>
        8.0
      </b>
      ]) * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Def_SOS [
      <b>
        96.6
      </b>
      ])
    </li>
    <span>
      <li>
        <u>
          Adjusted+ ORtg details
        </u>
         (
        <a
          href="https://www.bigtengeeks.com/new-stat-porpagatu/"
          target="_blank"
        >
          ?
        </a>
        )
      </li>
      <ul>
        <li>
          Normalization: Rtg+ [
          <b>
            6.5
          </b>
          ] = 20% * (Normalized_ORtg [
          <b>
            132.3
          </b>
          ] - Avg_Efficiency [
          <b>
            100.0
          </b>
          ])
        </li>
        <ul>
          <li>
            <em>
              (Unused, Regressed_ORtg: [
              <b>
                121.8
              </b>
              ] = Avg_Efficiency [
              <b>
                100.0
              </b>
              ] + ORtg_SDs_Above_Mean [
              <b>
                2.2
              </b>
              ] * ORtg_SD_At_20%_Usage [
              <b>
                10.1
              </b>
              ])
            </em>
          </li>
        </ul>
        <li>
          Usage_Bonus: [
          <b>
            8.0
          </b>
          ] = 
          <span>
            ((Adj_Usage [
            <b>
              26.4
              %
            </b>
            ] - [
            <b>
              20%
            </b>
            ]) * [
            <b>
              1.25
            </b>
            ])
          </span>
        </li>
        <ul>
          <li>
            <em>
              (Factor would have been [
              <b>
                <span>
                  1.5
                </span>
              </b>
              ] at Adj_Usage 
              <span>
                &lt;
              </span>
               [
              <b>
                20%
              </b>
              ]), ie there is an additional penalty on low usage players
            </em>
          </li>
        </ul>
      </ul>
    </span>
  </ul>
  DRtg: [
  <b>
    98.8
  </b>
  ] = Team_DRtg [
  <b>
    97.1
  </b>
  ] + Player_Delta [
  <b>
    1.8
  </b>
  ]  (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about 
    DRtg
  </a>
  )
  <ul>
    <li>
      Team_DRtg: [
      <b>
        97.1
      </b>
      ] = 100 * Opponent_Pts [
      <b>
        1738
      </b>
      ] / Opponent_Poss [
      <b>
        1790
      </b>
      ] 
      <em>
        (only counting while player was on floor)
      </em>
    </li>
    <li>
      Player_Delta: [
      <b>
        1.8
      </b>
      ] = (Player_DRtg [
      <b>
        105.9
      </b>
      ] - Team_DRtg [
      <b>
        97.1
      </b>
      ]) / Team_Size [
      <b>
        5
      </b>
      ]
    </li>
    <ul>
      <li>
        Player_DRtg:  [
        <b>
          105.9
        </b>
        ] = 100 * Pts_Per_Score [
        <b>
          2.16
        </b>
        ] * Score_Conceded_By_Player% [
        <b>
          48.9
          %
        </b>
        ]
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ DRtg
      </b>
      : [
      <b>
        -1.7
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        91.5
      </b>
      ] (DRtg [
      <b>
        98.8
      </b>
      ] * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Off_SOS [
      <b>
        108.0
      </b>
      ]))
    </li>
    <span>
      <li>
        <u>
          DRtg details
        </u>
      </li>
      <ul>
        <li>
          <em>
            (Note: you can also view this as DRtg [
            <b>
              98.8
            </b>
            ] = ([
            <b>
              20%
            </b>
            ] * Player_DRtg [
            <b>
              105.9
            </b>
            ]) + ([
            <b>
              80%
            </b>
            ] * Team_DRtg [
            <b>
              97.1
            </b>
            ]); ie a weighted average of a player's defense when actively involved, vs when passively involved, eg guarding off ball (where the best you can do is use the Team_DRtg). This assumes every player is "targeted" 1/5th of the time.
          </em>
        </li>
        <li>
          Pts_Per_Score: [
          <b>
            2.16
          </b>
          ] = Opponent_PTS [
          <b>
            1738
          </b>
          ] / Scoring_Plays [
          <b>
            803.3
          </b>
          ]
        </li>
        <ul>
          <li>
            Scoring_Plays: [
            <b>
              803.3
            </b>
            ] = Opponent_FGM [
            <b>
              637
            </b>
            ] + Opponent_FTs_Hit_1+ [
            <b>
              166.3
            </b>
            ]
          </li>
          <ul>
            <li>
              Opponent_FTs_Hit_1+: [
              <b>
                166.3
              </b>
              ] = (1 - Opponent_FTs_Missed_Both% [
              <b>
                8.8
                %
              </b>
              ]) * ([0.475]*Opponent_FTA) [
              <b>
                182.4
              </b>
              ]
            </li>
            <ul>
              <li>
                Opponent_FTs_Missed_Both%: [
                <b>
                  8.8
                  %
                </b>
                ] = (1 - Opponent_FT% [
                <b>
                  70.3
                  %
                </b>
                ])^2
              </li>
              <li>
                <em>
                  ([0.475*FTA is a standard equation for estimating the number of trips to the FT line)
                </em>
              </li>
            </ul>
          </ul>
        </ul>
        <li>
          Score_Conceded_By_Player%: [
          <b>
            48.9
            %
          </b>
          ] = 1 - Stops_Credit_Player% [
          <b>
            19.4
            %
          </b>
          ] - Stops_Credit_Team% [
          <b>
            31.7
            %
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (We split stops into those that can be at least partially assigned to a player, and those where the best you can do is use the team stats)
            </em>
          </li>
          <li>
            Stops_Credit_Player%: [
            <b>
              19.4
              %
            </b>
            ] = (NoShot_Credit [
            <b>
              32.3
            </b>
            ] + Rebound_Credit [
            <b>
              34.6
            </b>
            ] + MissFT_Credit [
            <b>
              2.5
            </b>
            ]) / (20% * Opponent_Poss) [
            <b>
              358.0
            </b>
            ]
          </li>
          <ul>
            <li>
              NoShot_Credit: [
              <b>
                32.3
              </b>
              ] = Steals [
              <b>
                30
              </b>
              ] + (Block [
              <b>
                5
              </b>
              ] * Opponent_Miss_Credit% [
              <b>
                45.2
                %
              </b>
              ])
            </li>
            <ul>
              <li>
                Opponent_Miss_Credit%: [
                <b>
                  45.2
                  %
                </b>
                ] = Miss_vs_Rebound_Credit% [
                <b>
                  64.0
                  %
                </b>
                ] * Team_Rebound_Miss% [
                <b>
                  77.7
                  %
                </b>
                ]
              </li>
              <li>
                Miss_vs_Rebound_Credit%: [
                <b>
                  64.0
                  %
                </b>
                ] = % Credit_To_Shot_Defense [
                <b>
                  29.1
                  %
                </b>
                ] / (% Credit_To_Shot_Defense [
                <b>
                  29.1
                  %
                </b>
                ] + % Credit_To_Rebounder [
                <b>
                  16.4
                  %
                </b>
                ]) 
              </li>
              <ul>
                <li>
                  <em>
                    (The theory here is that after a missed shot and a defensive rebound, we assign credit to the shot defender based on the relative difficulty of preventing the score vs rebounding the miss)
                  </em>
                </li>
                <li>
                  % Credit_To_Shot_Defense: [
                  <b>
                    29.1
                    %
                  </b>
                  ] = Opponent_FG% [
                  <b>
                    40.1
                    %
                  </b>
                  ] * Team_DRB% [
                  <b>
                    72.6
                    %
                  </b>
                  ]
                </li>
                <li>
                  % Credit_To_Rebounder: [
                  <b>
                    16.4
                    %
                  </b>
                  ] = Opponent_FGmiss% [
                  <b>
                    59.9
                    %
                  </b>
                  ] * Opponent_ORB% [
                  <b>
                    27.4
                    %
                  </b>
                  ]
                </li>
              </ul>
              <li>
                Team_Rebound_Miss%: [
                <b>
                  77.7
                  %
                </b>
                ] = Miss_Rebound_Weight [
                <b>
                  107%
                </b>
                ] * Team_DRB% [
                <b>
                  72.6
                  %
                </b>
                ]
              </li>
            </ul>
            <li>
              Rebound_Credit: [
              <b>
                34.6
              </b>
              ] = Rebounds [
              <b>
                96
              </b>
              ] * (1 - Miss_vs_Rebound_Credit% [
              <b>
                64.0
                %
              </b>
              ])
            </li>
            <li>
              MissFT_Credit: [
              <b>
                2.5
              </b>
              ] = PF% [
              <b>
                15.8
                %
              </b>
              ] * (0.475*Opponent_FTA) [
              <b>
                182.4
              </b>
              ] * Opponent_FTs_Missed_Both% [
              <b>
                8.8
                %
              </b>
              ]
            </li>
            <ul>
              <li>
                <em>
                  ([0.475]*FTA is standard for estimating the number of trips to the FT line)
                </em>
              </li>
            </ul>
          </ul>
          <li>
            Stops_Credit_Team%: [
            <b>
              31.7
              %
            </b>
            ] = ((Opponent_FGMiss [
            <b>
              843
            </b>
            ] * Opponent_Miss_Credit% [
            <b>
              45.2
              %
            </b>
            ]) + Opponent_NonSteal_TOV [
            <b>
              186
            </b>
            ]) / Opponent_Poss [
            <b>
              1790
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Opponent_Miss_Credit% is described under Stops_Credit_Player%, above)
              </em>
            </li>
            <li>
              Opponent_FGMiss: [
              <b>
                843
              </b>
              ] = Opponent_FGA [
              <b>
                1588
              </b>
              ] - Opponent_FGM [
              <b>
                637
              </b>
              ] - Team_BLK [
              <b>
                108
              </b>
              ]
            </li>
            <li>
              Opponent_NonSteal_TOV: [
              <b>
                186
              </b>
              ] = Opponent_TOV [
              <b>
                312
              </b>
              ] - Team_STL [
              <b>
                126
              </b>
              ]
            </li>
          </ul>
        </ul>
        <li>
          Adj+ Rtg Normalization: Rtg+ [
          <b>
            -1.7
          </b>
          ] = 20% * (Rtg [
          <b>
            91.5
          </b>
          ] - Avg_Efficiency [
          <b>
            100.0
          </b>
          ])
        </li>
      </ul>
    </span>
  </ul>
</span>
`;

exports[`RosterStatsDiagView RosterStatsDiagView - expanded, should create snapshot 2`] = `
<span>
  ORtg: [
  <b>
    119.8
  </b>
  ] = Points_Produced [
  <b>
    569.6
  </b>
  ] / Adjusted_Possessions [
  <b>
    475.2
  </b>
  ] (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about points
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about possessions
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about Adj+ ORtg
  </a>
  )
  <ul>
    <li>
      Points_Produced: [
      <b>
        569.6
      </b>
      ] = PProd_From_ORB [
      <b>
        9.6
      </b>
      ] + [
      <b>
        560.0
      </b>
      ] (PProd_From_FG [
      <b>
        299.2
      </b>
      ] + FTM [
      <b>
        172.0
      </b>
      ] + PProd_From_AST [
      <b>
        88.8
      </b>
      ], less Team_ORB_Contrib% [
      <b>
        0.0
        %
      </b>
      ]==[
      <b>
        0.0
      </b>
      ])
    </li>
    <ul>
      <li>
        <em>
          Compare raw stats: orb=[
          <b>
            17
          </b>
          ], pts=[
          <b>
            506
          </b>
          ] (fg_pts=[
          <b>
            334
          </b>
           = 
          <b>
            3
          </b>
          *
          <b>
            56
          </b>
           + 
          <b>
            2
          </b>
          *(
          <b>
            18
          </b>
           + 
          <b>
            65
          </b>
          )] + ftm=[
          <b>
            172
          </b>
          ]), assists=[
          <b>
            147
          </b>
          ]
        </em>
      </li>
    </ul>
    <span>
      <li>
        <u>
          Points section
        </u>
      </li>
      <ul>
        <li>
          PProd_From_FG: [
          <b>
            299.2
          </b>
          ] = Raw_FG_Pts [
          <b>
            334.0
          </b>
          ], less Team_Assist_Contrib% [
          <b>
            9.5
            %
          </b>
          ] * Assisted_Pts_Per_FG_Bonus [
          <b>
            1.10
          </b>
          ], gives [
          <b>
            34.8
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (Team_Assist_Contrib%: In the same way that Player gets rewarded for assisting their team, they get slightly less rewarded when they scored off an assist):
            </em>
          </li>
          <li>
            Team_Assist_Contrib% [
            <b>
              9.5
              %
            </b>
            ] = Weighting ([
            <b>
              0.5
            </b>
            ] * Player_Assisted_eFG [~
            <b>
              50.7
              %
            </b>
            ]) * Player_Assisted_Rate [~
            <b>
              37.4
              %
            </b>
            ] (averaged over shot types)
          </li>
          <ul>
            <li>
              <em>
                (The theory behind the weighting is that easier shots are harder to assist, so the higher the eFG the more credit to the assist.)
              </em>
            </li>
            <li>
              <em>
                The above values are calculated using a player's assist networks vs shot type. The "classic" algorithm approximates from box scores, giving ORtg=[
                <b>
                  119.5
                </b>
                ]:
              </em>
            </li>
            <ul>
              <li>
                <em>
                  (Classic) Team_Assist_Contrib% [
                  <b>
                    8.8
                    %
                  </b>
                  ] = Weighting ([
                  <b>
                    0.5
                  </b>
                  ] * Player_eFG [
                  <b>
                    46.9
                    %
                  </b>
                  ]) * Player_Assisted_Rate [
                  <b>
                    37.4
                    %
                  </b>
                  ]
                </em>
              </li>
              <li>
                <em>
                  (Classic, Unused) Team_Assist_Rate: [
                  <b>
                    37.9
                    %
                  </b>
                  ] = (Weighting [
                  <b>
                    1.14
                  </b>
                  ] * (Others_AST [
                  <b>
                    214
                  </b>
                  ] / Team_FGM [
                  <b>
                    643
                  </b>
                  ])
                </em>
              </li>
            </ul>
          </ul>
        </ul>
        <li>
          PProd_From_AST: [
          <b>
            88.8
          </b>
          ] = Sum(Shot Type)[Weighting ([
          <b>
            0.5
          </b>
          ] * ShotType_eFG [
          <b>
            48.8/48.8/48.8
          </b>
          ]%) * [
          <b>
            3/2/2
          </b>
          ]pts * Player_Assists [
          <b>
            70/10/67
          </b>
          ]]
        </li>
        <ul>
          <li>
            <em>
              (Classic) PProd_From_AST: [
              <b>
                82.9
              </b>
              ] = Weighting ([
              <b>
                0.5
              </b>
              ] * Team_Not_Player_eFG [
              <b>
                48.8
                %
              </b>
              ]) * Team_Not_Player_Pts_Per_Made_Shot [
              <b>
                2.3
              </b>
              ] * Player_Assists [
              <b>
                147
              </b>
              ]
            </em>
          </li>
        </ul>
        <li>
          PProd_From_ORB: [
          <b>
            9.6
          </b>
          ] = Team_ORB_Weight [
          <b>
            61.3
            %
          </b>
          ] * ORB [
          <b>
            17.0
          </b>
          ] * % Plays_Team_Scored [
          <b>
            42.2
            %
          </b>
          ] * Pts_Per_Scoring_Possession [
          <b>
            2.2
          </b>
          ] 
        </li>
        <ul>
          <li>
            <em>
              (Team_ORB_Weight is described under Team_ORB_Contrib%, below)
            </em>
          </li>
          <li>
            <em>
              (% Plays_Team_Scored is described in the possessions section, below)
            </em>
          </li>
          <li>
            Pts_Per_Scoring_Possession: [
            <b>
              2.2
            </b>
            ] = Team_Pts [
            <b>
              1937.0
            </b>
            ] / Team_Scoring_Plays [
            <b>
              890.4
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Team_Scoring_Plays described under possessions section, below)
              </em>
            </li>
          </ul>
        </ul>
        <li>
          <em>
            (Team_ORB_Contrib%: In the same way a Player gets rewarded for an ORB, they get slightly less reward for a score that comes off someone else's rebound):
          </em>
        </li>
        <li>
          Team_ORB_Contrib%: [
          <b>
            0.0
          </b>
          %] = Team_ORB_Weight [
          <b>
            61.3
            %
          </b>
          ] * % Team_Scoring_Plays_From_Rebound [
          <b>
            0.0
            %
          </b>
          ]
        </li>
        <ul>
          <li>
            % Team_Scoring_Plays_From_Rebound: [
            <b>
              0.0
              %
            </b>
            ] = (~All_Players_ORB [
            <b>
              0.0
            </b>
            ] * % Plays_Team_Scored [
            <b>
              42.2
              %
            </b>
            ]) / Scoring_Plays [
            <b>
              890.4
            </b>
            ] 
          </li>
          <ul>
            <li>
              <em>
                (% Plays_Team_Scored is described in the possessions section, below)
              </em>
            </li>
          </ul>
          <li>
            Team_ORB_Weight: [
            <b>
              61.3
              %
            </b>
            ] = % Credit_To_Rebounder [
            <b>
              28.9
              %
            </b>
            ] / ( % Credit_To_Rebounder [
            <b>
              28.9
              %
            </b>
            ] + % Credit_To_Scorer [
            <b>
              18.2
              %
            </b>
            ])
          </li>
          <ul>
            <li>
              <em>
                (The theory here is that we assign credit to the rebounder based on the relative difficulty of rebounding vs scoring)
              </em>
            </li>
            <li>
              % Credit_To_Rebounder: [
              <b>
                28.9
                %
              </b>
              ] = Team_No_ORB% [
              <b>
                68.5
                %
              </b>
              ] * Team_Score% [
              <b>
                42.2
                %
              </b>
              ]
            </li>
            <li>
              % Credit_To_Scorer: [
              <b>
                18.2
                %
              </b>
              ] = Team_ORB% [
              <b>
                31.5
                %
              </b>
              ] * Team_No_Score% [
              <b>
                57.8
                %
              </b>
              ]
            </li>
          </ul>
        </ul>
      </ul>
    </span>
    <li>
      Adjusted_Possessions: [
      <b>
        475.2
      </b>
      ] = Scoring_Possessions [
      <b>
        259.0
      </b>
      ] + Missed_FG_Possessions [
      <b>
        143.9
      </b>
      ] + Missed_FT_Possessions [
      <b>
        3.4
      </b>
      ] + TO [
      <b>
        69
      </b>
      ]
    </li>
    <ul>
      <li>
        (Gives adjusted usage: Adj_Usage = [
        <b>
          26.4
          %
        </b>
        ])
      </li>
      <li>
        <em>
          Compare raw stats: poss=[
          <b>
            451.5
          </b>
          ] (fga=[
          <b>
            356
          </b>
           = 
          <b>
            174
          </b>
           + (
          <b>
            65
          </b>
           + 
          <b>
            117
          </b>
          )] + [
          <b>
            0.454
          </b>
          ]*fta=[
          <b>
            96.3
          </b>
          ] + to=[
          <b>
            69
          </b>
          ] - orb=[
          <b>
            69.8
          </b>
          ])
        </em>
      </li>
    </ul>
    <span>
      <li>
        <u>
          Possessions section
        </u>
      </li>
      <ul>
        <li>
          Scoring_Possessions: [
          <b>
            259.0
          </b>
          ] = ORB_Part [
          <b>
            4.4
          </b>
          ] + (FG_Part [
          <b>
            125.8
          </b>
          ] + FT_Part [
          <b>
            92.9
          </b>
          ] + AST_Part [
          <b>
            35.9
          </b>
          ], less Team_ORB_Contrib% [
          <b>
            0.0
            %
          </b>
          ]==[
          <b>
            0.0
          </b>
          ])
        </li>
        <ul>
          <li>
            ORB_Part: [
            <b>
              4.4
            </b>
            ] = Team_ORB_Weight [
            <b>
              61.3
              %
            </b>
            ] * Scoring_Plays_From_Rebound [
            <b>
              7.2
            </b>
            ] (ORB [
            <b>
              17
            </b>
            ] * % Plays_Team_Scored [
            <b>
              42.2
              %
            </b>
            ]) 
          </li>
          <ul>
            <li>
              % Plays_Team_Scored: [
              <b>
                42.2
                %
              </b>
              ] = Team_Scoring_Plays [
              <b>
                890.4
              </b>
              ] / Team_Total_Plays [
              <b>
                2112.0
              </b>
              ]
            </li>
            <li>
              Team_Scoring_Plays: [
              <b>
                890.4
              </b>
              ] = Team_FGM [
              <b>
                643.0
              </b>
              ] + Team_FTs_Hit_1+ [
              <b>
                247.4
              </b>
              ]
            </li>
            <ul>
              <li>
                Team_FTs_Hit_1+: [
                <b>
                  247.4
                </b>
                ] = (1 - Team_FTs_Missed_Both% [
                <b>
                  5.9
                  %
                </b>
                ]) * ([
                <b>
                  0.454
                </b>
                ]*Team_FTA) [
                <b>
                  263.0
                </b>
                ]
              </li>
              <ul>
                <li>
                  Team_FTs_Missed_Both%: [
                  <b>
                    5.9
                    %
                  </b>
                  ] = (1 - Team_FT% [
                  <b>
                    75.6
                    %
                  </b>
                  ])^2
                </li>
                <li>
                  <em>
                    ([0.475]*FTA is standard for estimating the number of trips to the FT line; we use [
                    <b>
                      0.454
                    </b>
                    ] inferred from the actual possession count)
                  </em>
                </li>
              </ul>
            </ul>
            <li>
              Team_Total_Plays: [
              <b>
                2112.0
              </b>
              ] = Team_FGA [
              <b>
                1550
              </b>
              ] + ([
              <b>
                0.454
              </b>
              ]*Team_FTA) [
              <b>
                263.0
              </b>
              ] + Team_TOV [
              <b>
                299
              </b>
              ]
            </li>
            <li>
              <em>
                (Team_ORB_Weight is described in the points section, above. The cost of the play is reduced like the reward of the score)
              </em>
            </li>
          </ul>
          <li>
            FG_Part: [
            <b>
              125.8
            </b>
            ] = FGM [
            <b>
              139.0
            </b>
            ], less Team_Assist_Contrib% [
            <b>
              9.5
              %
            </b>
            ]===[
            <b>
              13.2
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Team_Assist_Contrib% is described in the points section, above. Since it reduces the reward of a score, it also reduces the cost of the play)
              </em>
            </li>
          </ul>
          <li>
            FT_Part: [
            <b>
              92.9
            </b>
            ] = (1 - Missed_Both_FTs% [
            <b>
              3.6
              %
            </b>
            ]) * [
            <b>
              0.454
            </b>
            ]*FTA [
            <b>
              96.3
            </b>
            ]
          </li>
          <ul>
            <li>
              Missed_Both_FTs%: [
              <b>
                3.6
                %
              </b>
              ] = (1 - FT% [
              <b>
                81.1
                %
              </b>
              ])^2
            </li>
          </ul>
          <li>
            AST_Part: [
            <b>
              35.9
            </b>
            ] = Sum(Shot Type)[Weighting ([
            <b>
              0.5
            </b>
            ] * ShotType_eFG [
            <b>
              48.8/48.8/48.8
            </b>
            ]%) * Player_Assists [
            <b>
              70/10/67
            </b>
            ]]
          </li>
          <li>
            <em>
              (Team_ORB_Contrib% is described in the points section, above. Since it reduces the reward of a score, it also reduces the cost of the play)
            </em>
          </li>
        </ul>
        <li>
          Missed_FG_Possessions: [
          <b>
            143.9
          </b>
          ] = Missed_FG [
          <b>
            217.0
          </b>
          ], less Team_Rebound_Weight [
          <b>
            33.7
            %
          </b>
          ]==[
          <b>
            73.1
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (Team_Rebound_Weight: each missed shot doesn't count a full possession, because it may be rebounded)
            </em>
          </li>
          <li>
            Team_Rebound_Weight: [
            <b>
              33.7
              %
            </b>
            ] = Weight [
            <b>
              1.07
            </b>
            ] * Team_ORB% [
            <b>
              31.5
              %
            </b>
            ]
          </li>
        </ul>
        <li>
          Missed_FT_Possessions: [
          <b>
            3.4
          </b>
          ] = Missed_Both_FTs% [
          <b>
            3.6
            %
          </b>
          ] * [
          <b>
            0.454
          </b>
          ]*FTA [
          <b>
            96.3
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (FT possession calcs above, under Team_Scoring_Plays)
            </em>
          </li>
        </ul>
      </ul>
    </span>
    <li>
      <b>
        Adjusted+ ORtg
      </b>
      : [
      <b>
        6.5
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        132.3
      </b>
      ] (ORtg [
      <b>
        119.8
      </b>
      ] + Usage_Bonus [
      <b>
        8.0
      </b>
      ]) * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Def_SOS [
      <b>
        96.6
      </b>
      ])
    </li>
    <span>
      <li>
        <u>
          Adjusted+ ORtg details
        </u>
         (
        <a
          href="https://www.bigtengeeks.com/new-stat-porpagatu/"
          target="_blank"
        >
          ?
        </a>
        )
      </li>
      <ul>
        <li>
          Normalization: Rtg+ [
          <b>
            6.5
          </b>
          ] = 20% * (Normalized_ORtg [
          <b>
            132.3
          </b>
          ] - Avg_Efficiency [
          <b>
            100.0
          </b>
          ])
        </li>
        <ul>
          <li>
            <em>
              (Unused, Regressed_ORtg: [
              <b>
                121.8
              </b>
              ] = Avg_Efficiency [
              <b>
                100.0
              </b>
              ] + ORtg_SDs_Above_Mean [
              <b>
                2.2
              </b>
              ] * ORtg_SD_At_20%_Usage [
              <b>
                10.1
              </b>
              ])
            </em>
          </li>
        </ul>
        <li>
          Usage_Bonus: [
          <b>
            8.0
          </b>
          ] = 
          <span>
            ((Adj_Usage [
            <b>
              26.4
              %
            </b>
            ] - [
            <b>
              20%
            </b>
            ]) * [
            <b>
              1.25
            </b>
            ])
          </span>
        </li>
        <ul>
          <li>
            <em>
              (Factor would have been [
              <b>
                <span>
                  1.5
                </span>
              </b>
              ] at Adj_Usage 
              <span>
                &lt;
              </span>
               [
              <b>
                20%
              </b>
              ]), ie there is an additional penalty on low usage players
            </em>
          </li>
        </ul>
      </ul>
    </span>
  </ul>
  <p>
    "On-Ball Aware" DRtg: [
    <b>
      96.9
    </b>
    ] = OnBall_Player_DRtg [
    <b>
      104.0
    </b>
    ] + Unassigned_Plays_Bonus [
    <b>
      -7.1
    </b>
    ]  (
    <a
      href="#"
      onClick={[Function]}
    >
      less
       about "On-Ball" DRtg
    </a>
    )
    <ul>
      <li>
        OnBall_Player_DRtg: [
        <b>
          104.0
        </b>
        ] = 100 * (Pts_Per_Score [
        <b>
          2.16
        </b>
        ] - Rebound_Credit [
        <b>
          29.5
          %
        </b>
        ] - Stop_Credit [
        <b>
          82.9
          %
        </b>
        ])
      </li>
      <li>
        Unassigned_Plays_Bonus: [
        <b>
          -7.1
        </b>
        ] = Regress to [
        <b>
          -7.0
        </b>
        ] by [
        <b>
          92.0
          %
        </b>
        ] from [
        <b>
          -8.3
        </b>
        ] (
        <i>
          Avg_Classic_DRtg
        </i>
         [
        <b>
          98.8
        </b>
        ] - 
        <i>
          Avg_OnBallPlayer_DRtg
        </i>
         [
        <b>
          107.2
        </b>
        ])
      </li>
      <li>
        <b>
          Adjusted+ DRtg
        </b>
        : [
        <b>
          -2.1
        </b>
        ] = 
        <em>
          Normalize
        </em>
         [
        <b>
          89.7
        </b>
        ] (DRtg [
        <b>
          96.9
        </b>
        ] * (Avg_Efficiency [
        <b>
          100.0
        </b>
        ] / Off_SOS [
        <b>
          108.0
        </b>
        ]))
      </li>
      <span>
        <li>
          <u>
            "On-Ball" DRtg details
          </u>
        </li>
        <ul>
          <li>
            Rebound_Credit: [
            <b>
              29.5
              %
            </b>
            ] = Pts_Per_Score [
            <b>
              2.16
            </b>
            ] * ([
            <b>
              20%
            </b>
            ]*Player_Rebound_Credit [
            <b>
              9.7
              %
            </b>
            ]) + [
            <b>
              80%
            </b>
            ]*Team_Rebound_Credit [
            <b>
              14.6
              %
            </b>
            ])
          </li>
          <ul>
            <li>
              Player_Rebound_Credit: [
              <b>
                9.7
                %
              </b>
              ] = Classic_Rebound_Credit [
              <b>
                34.6
              </b>
              ] / (20% * Opponent_Poss) [
              <b>
                358.0
              </b>
              ]
            </li>
            <li>
              Team_Rebound_Credit: [
              <b>
                14.6
                %
              </b>
              ] = Team_Rebounds [
              <b>
                726
              </b>
              ] * (1 - Classic_Miss_vs_Rebound_Credit% [
              <b>
                64.0
                %
              </b>
              ]) / Opponent_Poss [
              <b>
                1790
              </b>
              ]
            </li>
            <li>
              <i>
                (This is the same as "Classic", except with Team_DRtg decomposed into rebound and stops - see below)
              </i>
            </li>
          </ul>
          <li>
            Stop_Credit: [
            <b>
              82.9
              %
            </b>
            ] = [
            <b>
              5
            </b>
            ] * ((OnBall_Weight [
            <b>
              4.9
              %
            </b>
            ] * OnBall_Credit [
            <b>
              113.4
              %
            </b>
            ]) +  (OffBall_Weight [
            <b>
              13.2
              %
            </b>
            ] * OffBall_Credit [
            <b>
              84.0
              %
            </b>
            ]) )
          </li>
          <ul>
            <li>
              <i>
                (* [
                <b>
                  5
                </b>
                ] because each player in the lineup has equal defensive responsibilities)
              </i>
            </li>
            <li>
              OnBall_Credit: [
              <b>
                113.4
                %
              </b>
              ] = Player_Pts_Per_Score [
              <b>
                2.43
              </b>
              ] * Player_Stop_Credit [
              <b>
                46.7
                %
              </b>
              ]
            </li>
            <ul>
              <li>
                Player_Stop_Credit: [
                <b>
                  46.7
                  %
                </b>
                ] = No_Shot_Credit [
                <b>
                  86.6
                </b>
                ] + Classic_Missed_FTs [
                <b>
                  2.5
                </b>
                ]) / Targeted_Poss [
                <b>
                  185.6
                </b>
                ]
              </li>
              <li>
                NoShot_Credit: [
                <b>
                  86.6
                </b>
                ] = (Classic_Miss_Weight [
                <b>
                  45.2
                  %
                </b>
                ] * Credited_Misses [
                <b>
                  111
                </b>
                ]) + Credited_TOVs [
                <b>
                  33.9
                </b>
                ]
              </li>
              <li>
                Targeted_Poss: [
                <b>
                  185.6
                </b>
                ] = Targeted_Plays [
                <b>
                  216
                </b>
                ] - (Credited_Misses [
                <b>
                  111
                </b>
                ] * Opponent_ORB% [
                <b>
                  27.4
                  %
                </b>
                ])
              </li>
            </ul>
            <li>
              OffBall_Credit: [
              <b>
                84.0
                %
              </b>
              ] = Weighted_Pts_Per_Score [
              <b>
                2.13
              </b>
              ] * Not_Player_Stop_Credit [
              <b>
                39.5
                %
              </b>
              ]
            </li>
            <ul>
              <li>
                Weighted_Pts_Per_Score: [
                <b>
                  2.13
                </b>
                ] = (Pts_Per_Score [
                <b>
                  2.16
                </b>
                ] - (Targeted% [
                <b>
                  12.1
                  %
                </b>
                ] * Player_Pts_Per_Score [
                <b>
                  2.43
                </b>
                ]))/(1 - Targeted% [
                <b>
                  12.1
                  %
                </b>
                ])
              </li>
              <li>
                Not_Player_Stop_Credit [
                <b>
                  39.5
                  %
                </b>
                ]:
                <i>
                   We decompose Team_DRtg for all non-player points into rebound and stop credit
                </i>
              </li>
              <ul>
                <li>
                  <i>
                    Delta Pts=[
                    <b>
                      -
                      199.0
                    </b>
                    ], Poss=[
                    <b>
                      -
                      217.2
                    </b>
                    ], DRBs=[
                    <b>
                      -
                      94.3
                    </b>
                    ], DRtgs: all=[
                    <b>
                      -
                      97.1
                    </b>
                    ] vs [
                    <b>
                      97.9
                    </b>
                    ]
                  </i>
                </li>
              </ul>
              <li>
                <i>
                  NonPlayer_Team_DRtg [
                  <b>
                    97.9
                  </b>
                  ] = 100*Pts_Per_Score [
                  <b>
                    2.13
                  </b>
                  ]*(1 - Other_Rebound_Credit [
                  <b>
                    14.5
                    %
                  </b>
                  ] - 
                  <u>
                    Not_Player_Stop_Credit
                  </u>
                   [
                  <b>
                    39.5
                    %
                  </b>
                  ]
                </i>
              </li>
            </ul>
            <li>
              OnBall_Weight: [
              <b>
                4.9
                %
              </b>
              ] = On_vs_OffBall_Weight [
              <b>
                40.0
                %
              </b>
              ] * Targeted% [
              <b>
                12.1
                %
              </b>
              ]
            </li>
            <ul>
              <li>
                Targeted%: [
                <b>
                  12.1
                  %
                </b>
                ] = (Targeted_Plays [
                <b>
                  216
                </b>
                ] / Total_Plays [
                <b>
                  1780
                </b>
                ]) / Player_Poss% [
                <b>
                  100.0
                  %
                </b>
                ]
              </li>
              <li>
                <i>
                  (On_vs_OffBall_Weight [
                  <b>
                    40.0
                    %
                  </b>
                  ] is a arbitrary split of credit given to on-ball vs help defense)
                </i>
              </li>
            </ul>
            <li>
              OffBall_Weight: [
              <b>
                13.2
                %
              </b>
              ] = [
              <b>
                25%
              </b>
              ] * (1 - On_vs_OffBall_Weight [
              <b>
                40.0
                %
              </b>
              ])*(1 - Targeted% [
              <b>
                12.1
                %
              </b>
              ])
            </li>
            <ul>
              <li>
                <i>
                  ([
                  <b>
                    25%
                  </b>
                  ] because the help defense is spread out across the 4 non-on-ball defenders)
                </i>
              </li>
            </ul>
          </ul>
          <li>
            <i>
              (Unassigned_Plays_Bonus spreads out the credit for stops not assigned an on-ball defender. It is typically [
              <b>
                -7.0
              </b>
              ] +- [
              <b>
                2.0
              </b>
              ] pts/100)
            </i>
          </li>
        </ul>
      </span>
    </ul>
  </p>
  <span>
    "Classic" 
  </span>
  DRtg: [
  <b>
    98.8
  </b>
  ] = Team_DRtg [
  <b>
    97.1
  </b>
  ] + Player_Delta [
  <b>
    1.8
  </b>
  ]  (
  <a
    href="#"
    onClick={[Function]}
  >
    less
     about 
    <span>
      "Classic" 
    </span>
    DRtg
  </a>
  )
  <ul>
    <li>
      Team_DRtg: [
      <b>
        97.1
      </b>
      ] = 100 * Opponent_Pts [
      <b>
        1738
      </b>
      ] / Opponent_Poss [
      <b>
        1790
      </b>
      ] 
      <em>
        (only counting while player was on floor)
      </em>
    </li>
    <li>
      Player_Delta: [
      <b>
        1.8
      </b>
      ] = (Player_DRtg [
      <b>
        105.9
      </b>
      ] - Team_DRtg [
      <b>
        97.1
      </b>
      ]) / Team_Size [
      <b>
        5
      </b>
      ]
    </li>
    <ul>
      <li>
        Player_DRtg:  [
        <b>
          105.9
        </b>
        ] = 100 * Pts_Per_Score [
        <b>
          2.16
        </b>
        ] * Score_Conceded_By_Player% [
        <b>
          48.9
          %
        </b>
        ]
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ DRtg
      </b>
      : [
      <b>
        -1.7
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        91.5
      </b>
      ] (DRtg [
      <b>
        98.8
      </b>
      ] * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Off_SOS [
      <b>
        108.0
      </b>
      ]))
    </li>
    <span>
      <li>
        <u>
          <span>
            "Classic" 
          </span>
          DRtg details
        </u>
      </li>
      <ul>
        <li>
          <em>
            (Note: you can also view this as DRtg [
            <b>
              98.8
            </b>
            ] = ([
            <b>
              20%
            </b>
            ] * Player_DRtg [
            <b>
              105.9
            </b>
            ]) + ([
            <b>
              80%
            </b>
            ] * Team_DRtg [
            <b>
              97.1
            </b>
            ]); ie a weighted average of a player's defense when actively involved, vs when passively involved, eg guarding off ball (where the best you can do is use the Team_DRtg). This assumes every player is "targeted" 1/5th of the time.
          </em>
        </li>
        <li>
          Pts_Per_Score: [
          <b>
            2.16
          </b>
          ] = Opponent_PTS [
          <b>
            1738
          </b>
          ] / Scoring_Plays [
          <b>
            803.3
          </b>
          ]
        </li>
        <ul>
          <li>
            Scoring_Plays: [
            <b>
              803.3
            </b>
            ] = Opponent_FGM [
            <b>
              637
            </b>
            ] + Opponent_FTs_Hit_1+ [
            <b>
              166.3
            </b>
            ]
          </li>
          <ul>
            <li>
              Opponent_FTs_Hit_1+: [
              <b>
                166.3
              </b>
              ] = (1 - Opponent_FTs_Missed_Both% [
              <b>
                8.8
                %
              </b>
              ]) * ([0.475]*Opponent_FTA) [
              <b>
                182.4
              </b>
              ]
            </li>
            <ul>
              <li>
                Opponent_FTs_Missed_Both%: [
                <b>
                  8.8
                  %
                </b>
                ] = (1 - Opponent_FT% [
                <b>
                  70.3
                  %
                </b>
                ])^2
              </li>
              <li>
                <em>
                  ([0.475*FTA is a standard equation for estimating the number of trips to the FT line)
                </em>
              </li>
            </ul>
          </ul>
        </ul>
        <li>
          Score_Conceded_By_Player%: [
          <b>
            48.9
            %
          </b>
          ] = 1 - Stops_Credit_Player% [
          <b>
            19.4
            %
          </b>
          ] - Stops_Credit_Team% [
          <b>
            31.7
            %
          </b>
          ]
        </li>
        <ul>
          <li>
            <em>
              (We split stops into those that can be at least partially assigned to a player, and those where the best you can do is use the team stats)
            </em>
          </li>
          <li>
            Stops_Credit_Player%: [
            <b>
              19.4
              %
            </b>
            ] = (NoShot_Credit [
            <b>
              32.3
            </b>
            ] + Rebound_Credit [
            <b>
              34.6
            </b>
            ] + MissFT_Credit [
            <b>
              2.5
            </b>
            ]) / (20% * Opponent_Poss) [
            <b>
              358.0
            </b>
            ]
          </li>
          <ul>
            <li>
              NoShot_Credit: [
              <b>
                32.3
              </b>
              ] = Steals [
              <b>
                30
              </b>
              ] + (Block [
              <b>
                5
              </b>
              ] * Opponent_Miss_Credit% [
              <b>
                45.2
                %
              </b>
              ])
            </li>
            <ul>
              <li>
                Opponent_Miss_Credit%: [
                <b>
                  45.2
                  %
                </b>
                ] = Miss_vs_Rebound_Credit% [
                <b>
                  64.0
                  %
                </b>
                ] * Team_Rebound_Miss% [
                <b>
                  77.7
                  %
                </b>
                ]
              </li>
              <li>
                Miss_vs_Rebound_Credit%: [
                <b>
                  64.0
                  %
                </b>
                ] = % Credit_To_Shot_Defense [
                <b>
                  29.1
                  %
                </b>
                ] / (% Credit_To_Shot_Defense [
                <b>
                  29.1
                  %
                </b>
                ] + % Credit_To_Rebounder [
                <b>
                  16.4
                  %
                </b>
                ]) 
              </li>
              <ul>
                <li>
                  <em>
                    (The theory here is that after a missed shot and a defensive rebound, we assign credit to the shot defender based on the relative difficulty of preventing the score vs rebounding the miss)
                  </em>
                </li>
                <li>
                  % Credit_To_Shot_Defense: [
                  <b>
                    29.1
                    %
                  </b>
                  ] = Opponent_FG% [
                  <b>
                    40.1
                    %
                  </b>
                  ] * Team_DRB% [
                  <b>
                    72.6
                    %
                  </b>
                  ]
                </li>
                <li>
                  % Credit_To_Rebounder: [
                  <b>
                    16.4
                    %
                  </b>
                  ] = Opponent_FGmiss% [
                  <b>
                    59.9
                    %
                  </b>
                  ] * Opponent_ORB% [
                  <b>
                    27.4
                    %
                  </b>
                  ]
                </li>
              </ul>
              <li>
                Team_Rebound_Miss%: [
                <b>
                  77.7
                  %
                </b>
                ] = Miss_Rebound_Weight [
                <b>
                  107%
                </b>
                ] * Team_DRB% [
                <b>
                  72.6
                  %
                </b>
                ]
              </li>
            </ul>
            <li>
              Rebound_Credit: [
              <b>
                34.6
              </b>
              ] = Rebounds [
              <b>
                96
              </b>
              ] * (1 - Miss_vs_Rebound_Credit% [
              <b>
                64.0
                %
              </b>
              ])
            </li>
            <li>
              MissFT_Credit: [
              <b>
                2.5
              </b>
              ] = PF% [
              <b>
                15.8
                %
              </b>
              ] * (0.475*Opponent_FTA) [
              <b>
                182.4
              </b>
              ] * Opponent_FTs_Missed_Both% [
              <b>
                8.8
                %
              </b>
              ]
            </li>
            <ul>
              <li>
                <em>
                  ([0.475]*FTA is standard for estimating the number of trips to the FT line)
                </em>
              </li>
            </ul>
          </ul>
          <li>
            Stops_Credit_Team%: [
            <b>
              31.7
              %
            </b>
            ] = ((Opponent_FGMiss [
            <b>
              843
            </b>
            ] * Opponent_Miss_Credit% [
            <b>
              45.2
              %
            </b>
            ]) + Opponent_NonSteal_TOV [
            <b>
              186
            </b>
            ]) / Opponent_Poss [
            <b>
              1790
            </b>
            ]
          </li>
          <ul>
            <li>
              <em>
                (Opponent_Miss_Credit% is described under Stops_Credit_Player%, above)
              </em>
            </li>
            <li>
              Opponent_FGMiss: [
              <b>
                843
              </b>
              ] = Opponent_FGA [
              <b>
                1588
              </b>
              ] - Opponent_FGM [
              <b>
                637
              </b>
              ] - Team_BLK [
              <b>
                108
              </b>
              ]
            </li>
            <li>
              Opponent_NonSteal_TOV: [
              <b>
                186
              </b>
              ] = Opponent_TOV [
              <b>
                312
              </b>
              ] - Team_STL [
              <b>
                126
              </b>
              ]
            </li>
          </ul>
        </ul>
        <li>
          Adj+ Rtg Normalization: Rtg+ [
          <b>
            -1.7
          </b>
          ] = 20% * (Rtg [
          <b>
            91.5
          </b>
          ] - Avg_Efficiency [
          <b>
            100.0
          </b>
          ])
        </li>
      </ul>
    </span>
  </ul>
</span>
`;

exports[`RosterStatsDiagView RosterStatsDiagView - should create snapshot 1`] = `
<span>
  ORtg: [
  <b>
    119.8
  </b>
  ] = Points_Produced [
  <b>
    569.6
  </b>
  ] / Adjusted_Possessions [
  <b>
    475.2
  </b>
  ] (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about points
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about possessions
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about Adj+ ORtg
  </a>
  )
  <ul>
    <li>
      Points_Produced: [
      <b>
        569.6
      </b>
      ] = PProd_From_ORB [
      <b>
        9.6
      </b>
      ] + [
      <b>
        560.0
      </b>
      ] (PProd_From_FG [
      <b>
        299.2
      </b>
      ] + FTM [
      <b>
        172.0
      </b>
      ] + PProd_From_AST [
      <b>
        88.8
      </b>
      ], less Team_ORB_Contrib% [
      <b>
        0.0
        %
      </b>
      ]==[
      <b>
        0.0
      </b>
      ])
    </li>
    <ul>
      <li>
        <em>
          Compare raw stats: orb=[
          <b>
            17
          </b>
          ], pts=[
          <b>
            506
          </b>
          ] (fg_pts=[
          <b>
            334
          </b>
           = 
          <b>
            3
          </b>
          *
          <b>
            56
          </b>
           + 
          <b>
            2
          </b>
          *(
          <b>
            18
          </b>
           + 
          <b>
            65
          </b>
          )] + ftm=[
          <b>
            172
          </b>
          ]), assists=[
          <b>
            147
          </b>
          ]
        </em>
      </li>
    </ul>
    <li>
      Adjusted_Possessions: [
      <b>
        475.2
      </b>
      ] = Scoring_Possessions [
      <b>
        259.0
      </b>
      ] + Missed_FG_Possessions [
      <b>
        143.9
      </b>
      ] + Missed_FT_Possessions [
      <b>
        3.4
      </b>
      ] + TO [
      <b>
        69
      </b>
      ]
    </li>
    <ul>
      <li>
        (Gives adjusted usage: Adj_Usage = [
        <b>
          26.4
          %
        </b>
        ])
      </li>
      <li>
        <em>
          Compare raw stats: poss=[
          <b>
            451.5
          </b>
          ] (fga=[
          <b>
            356
          </b>
           = 
          <b>
            174
          </b>
           + (
          <b>
            65
          </b>
           + 
          <b>
            117
          </b>
          )] + [
          <b>
            0.454
          </b>
          ]*fta=[
          <b>
            96.3
          </b>
          ] + to=[
          <b>
            69
          </b>
          ] - orb=[
          <b>
            69.8
          </b>
          ])
        </em>
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ ORtg
      </b>
      : [
      <b>
        6.5
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        132.3
      </b>
      ] (ORtg [
      <b>
        119.8
      </b>
      ] + Usage_Bonus [
      <b>
        8.0
      </b>
      ]) * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Def_SOS [
      <b>
        96.6
      </b>
      ])
    </li>
  </ul>
  DRtg: [
  <b>
    98.8
  </b>
  ] = Team_DRtg [
  <b>
    97.1
  </b>
  ] + Player_Delta [
  <b>
    1.8
  </b>
  ]  (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about 
    DRtg
  </a>
  )
  <ul>
    <li>
      Team_DRtg: [
      <b>
        97.1
      </b>
      ] = 100 * Opponent_Pts [
      <b>
        1738
      </b>
      ] / Opponent_Poss [
      <b>
        1790
      </b>
      ] 
      <em>
        (only counting while player was on floor)
      </em>
    </li>
    <li>
      Player_Delta: [
      <b>
        1.8
      </b>
      ] = (Player_DRtg [
      <b>
        105.9
      </b>
      ] - Team_DRtg [
      <b>
        97.1
      </b>
      ]) / Team_Size [
      <b>
        5
      </b>
      ]
    </li>
    <ul>
      <li>
        Player_DRtg:  [
        <b>
          105.9
        </b>
        ] = 100 * Pts_Per_Score [
        <b>
          2.16
        </b>
        ] * Score_Conceded_By_Player% [
        <b>
          48.9
          %
        </b>
        ]
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ DRtg
      </b>
      : [
      <b>
        -1.7
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        91.5
      </b>
      ] (DRtg [
      <b>
        98.8
      </b>
      ] * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Off_SOS [
      <b>
        108.0
      </b>
      ]))
    </li>
  </ul>
</span>
`;

exports[`RosterStatsDiagView RosterStatsDiagView - should create snapshot 2`] = `
<span>
  ORtg: [
  <b>
    119.8
  </b>
  ] = Points_Produced [
  <b>
    569.6
  </b>
  ] / Adjusted_Possessions [
  <b>
    475.2
  </b>
  ] (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about points
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about possessions
  </a>
  ) (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about Adj+ ORtg
  </a>
  )
  <ul>
    <li>
      Points_Produced: [
      <b>
        569.6
      </b>
      ] = PProd_From_ORB [
      <b>
        9.6
      </b>
      ] + [
      <b>
        560.0
      </b>
      ] (PProd_From_FG [
      <b>
        299.2
      </b>
      ] + FTM [
      <b>
        172.0
      </b>
      ] + PProd_From_AST [
      <b>
        88.8
      </b>
      ], less Team_ORB_Contrib% [
      <b>
        0.0
        %
      </b>
      ]==[
      <b>
        0.0
      </b>
      ])
    </li>
    <ul>
      <li>
        <em>
          Compare raw stats: orb=[
          <b>
            17
          </b>
          ], pts=[
          <b>
            506
          </b>
          ] (fg_pts=[
          <b>
            334
          </b>
           = 
          <b>
            3
          </b>
          *
          <b>
            56
          </b>
           + 
          <b>
            2
          </b>
          *(
          <b>
            18
          </b>
           + 
          <b>
            65
          </b>
          )] + ftm=[
          <b>
            172
          </b>
          ]), assists=[
          <b>
            147
          </b>
          ]
        </em>
      </li>
    </ul>
    <li>
      Adjusted_Possessions: [
      <b>
        475.2
      </b>
      ] = Scoring_Possessions [
      <b>
        259.0
      </b>
      ] + Missed_FG_Possessions [
      <b>
        143.9
      </b>
      ] + Missed_FT_Possessions [
      <b>
        3.4
      </b>
      ] + TO [
      <b>
        69
      </b>
      ]
    </li>
    <ul>
      <li>
        (Gives adjusted usage: Adj_Usage = [
        <b>
          26.4
          %
        </b>
        ])
      </li>
      <li>
        <em>
          Compare raw stats: poss=[
          <b>
            451.5
          </b>
          ] (fga=[
          <b>
            356
          </b>
           = 
          <b>
            174
          </b>
           + (
          <b>
            65
          </b>
           + 
          <b>
            117
          </b>
          )] + [
          <b>
            0.454
          </b>
          ]*fta=[
          <b>
            96.3
          </b>
          ] + to=[
          <b>
            69
          </b>
          ] - orb=[
          <b>
            69.8
          </b>
          ])
        </em>
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ ORtg
      </b>
      : [
      <b>
        6.5
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        132.3
      </b>
      ] (ORtg [
      <b>
        119.8
      </b>
      ] + Usage_Bonus [
      <b>
        8.0
      </b>
      ]) * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Def_SOS [
      <b>
        96.6
      </b>
      ])
    </li>
  </ul>
  <p>
    "On-Ball Aware" DRtg: [
    <b>
      96.9
    </b>
    ] = OnBall_Player_DRtg [
    <b>
      104.0
    </b>
    ] + Unassigned_Plays_Bonus [
    <b>
      -7.1
    </b>
    ]  (
    <a
      href="#"
      onClick={[Function]}
    >
      more
       about "On-Ball" DRtg
    </a>
    )
    <ul>
      <li>
        OnBall_Player_DRtg: [
        <b>
          104.0
        </b>
        ] = 100 * (Pts_Per_Score [
        <b>
          2.16
        </b>
        ] - Rebound_Credit [
        <b>
          29.5
          %
        </b>
        ] - Stop_Credit [
        <b>
          82.9
          %
        </b>
        ])
      </li>
      <li>
        Unassigned_Plays_Bonus: [
        <b>
          -7.1
        </b>
        ] = Regress to [
        <b>
          -7.0
        </b>
        ] by [
        <b>
          92.0
          %
        </b>
        ] from [
        <b>
          -8.3
        </b>
        ] (
        <i>
          Avg_Classic_DRtg
        </i>
         [
        <b>
          98.8
        </b>
        ] - 
        <i>
          Avg_OnBallPlayer_DRtg
        </i>
         [
        <b>
          107.2
        </b>
        ])
      </li>
      <li>
        <b>
          Adjusted+ DRtg
        </b>
        : [
        <b>
          -2.1
        </b>
        ] = 
        <em>
          Normalize
        </em>
         [
        <b>
          89.7
        </b>
        ] (DRtg [
        <b>
          96.9
        </b>
        ] * (Avg_Efficiency [
        <b>
          100.0
        </b>
        ] / Off_SOS [
        <b>
          108.0
        </b>
        ]))
      </li>
    </ul>
  </p>
  <span>
    "Classic" 
  </span>
  DRtg: [
  <b>
    98.8
  </b>
  ] = Team_DRtg [
  <b>
    97.1
  </b>
  ] + Player_Delta [
  <b>
    1.8
  </b>
  ]  (
  <a
    href="#"
    onClick={[Function]}
  >
    more
     about 
    <span>
      "Classic" 
    </span>
    DRtg
  </a>
  )
  <ul>
    <li>
      Team_DRtg: [
      <b>
        97.1
      </b>
      ] = 100 * Opponent_Pts [
      <b>
        1738
      </b>
      ] / Opponent_Poss [
      <b>
        1790
      </b>
      ] 
      <em>
        (only counting while player was on floor)
      </em>
    </li>
    <li>
      Player_Delta: [
      <b>
        1.8
      </b>
      ] = (Player_DRtg [
      <b>
        105.9
      </b>
      ] - Team_DRtg [
      <b>
        97.1
      </b>
      ]) / Team_Size [
      <b>
        5
      </b>
      ]
    </li>
    <ul>
      <li>
        Player_DRtg:  [
        <b>
          105.9
        </b>
        ] = 100 * Pts_Per_Score [
        <b>
          2.16
        </b>
        ] * Score_Conceded_By_Player% [
        <b>
          48.9
          %
        </b>
        ]
      </li>
    </ul>
    <li>
      <b>
        Adjusted+ DRtg
      </b>
      : [
      <b>
        -1.7
      </b>
      ] = 
      <em>
        Normalize
      </em>
       [
      <b>
        91.5
      </b>
      ] (DRtg [
      <b>
        98.8
      </b>
      ] * (Avg_Efficiency [
      <b>
        100.0
      </b>
      ] / Off_SOS [
      <b>
        108.0
      </b>
      ]))
    </li>
  </ul>
</span>
`;
